# Quifi

./: Cargo.toml
benches/: benchmarks.rs
examples/: array_io.rs  evolutionary_optimizer.rs  exponential_data.npy  from_python.py  least_squares.rs  levenberg_marquardt.rs  local_optimizer.rs  n_queens.rs  npy_io.rs  optimizer.rs  plot.rs  varpro.rs
oxigen/src/: age.rs  benchmarks.rs  crossover.rs  genotype.rs  lib copy.rs  lib.rs  mutation_rate.rs  niches_beta_rate.rs  population_refitness.rs  prelude.rs  selection.rs  selection_rate.rs  slope_params.rs  stop_criteria.rs  survival_pressure.rs
src/: evolutionary_optimizer.rs  levenberg_marquardt.rs  lib.rs  main.rs  models.rs  varpro.rs
tests/: import-data.rs  svd.rs
