[package]
name = "quick_fitting"
version = "0.1.0"
authors = ["Epsilonkugel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-npy = "0.8.0"
ndarray = "0.15.1"
nalgebra = "0.25.0"
plotters = "0.3.0"
levenberg-marquardt='0.8.0'
approx = "0.4.0"
rand_distr = "0.4.0"
rand = {version="0.7.0", features=["small_rng"]}
oxigen = { path = "./oxigen/oxigen" }
varpro = { path = "./varpro" }
# varpro = "0.2.0"
[profile.release]
opt-level = 3