[package]
name = "quifi"
version = "0.1.0"
authors = ["Epsilonkugel"]
edition = "2018"

[dependencies]
ndarray-npy = "0.8.0"
ndarray = "0.15"
nalgebra = "0.25.0"
plotters = "0.3.0"
levenberg-marquardt ='0.8.0'
approx = "0.4.0"
rand_distr = "0.4.0"
rand = {version="0.8.3", features=["default"]}
oxigen = { path = "oxigen" }
numpy = "0.14"
criterion = {version="0.3.4", features=['html_reports']}
makima_spline = "1.1.3"

[profile.release]
opt-level = 3

[lib]
name = "quifi"
crate-type= ["cdylib"]

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]

[[bench]]
name = "benchmarks"
harness = false